# duckdb-flyway

./: README.md  pyproject.toml
src/duckdb_flyway/: __init__.py  duckdb_flyway.py  duckdb_flyway_test.py
