[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckdb_flyway"]

[project]
name = "duckdb-flyway"
version = "0.1.0"
description = "DuckDB migrations tool"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Alexandru Rosianu", email = "me@aluxian.com" }]
keywords = []
classifiers = []
dependencies = [
    "duckdb>=1.1.3",
    "loguru>=0.7.3",
]

[project.urls]
Homepage = "https://github.com/aluxian/duckdb-flyway"
Repository = "https://github.com/aluxian/duckdb-flyway.git"
Issues = "https://github.com/aluxian/duckdb-flyway/issues"
Changelog = "https://github.com/aluxian/duckdb-flyway/releases"

[tool.uv]
dev-dependencies = ["pytest>=8.3.3", "ruff>=0.7.2", "pytest-mock>=3.12.0"]
